tests/NormalTests/paczka1/small_fuzzy/12335126.err
Error in line 4: ktGM S64 11W5
Error in line 3: ktGM S64 4,4
Error in line 9: ktGM S476 49,8
